 - [CHANGED]	Layout Improvements
 - [ADDED]		Minor animations
 - [CHANGED]	About page moved as a fragment from menu
 - [OPTIMIZED]	Operations
 
 MessageCounter 2.1.25 [December 2013]
 - [CHANGED]	Disabled orientation change
 - [CHANGED]	Simplified message counts at a glance
 - [OPTIMIZED]	Code and layout
 - [CHANGED]	Text block highlight color
 
 MessageCounter 2.1.28 [December 2013]
  - [CHANGED]	Animation durtions
  - [ADDED]		Display draft messages
  - [CHANGED]	Message counts at a glance
  
 MessageCounter 2.1.30 [December 2013]
 - [ADDED]		Preference screen and message from non contact preference
 - [ADDED]		Filter out non contact messages from chart screen
 
------------------------------------
	Version 2.2
------------------------------------

 MessageCounter 2.2.50 [January 2014]
 - [CHANGED]	App Icon and color scheme to holo violet
 - [CHANGED]	About screen layout
 - [ADDED]		Sent SMS Counter
 - [CHANGED]	Updated App Icon and color scheme to holo blue
 - [ADDED]		ShareActionProvider in ActionBar
 - [ADDED]		Different ActionBar logo
 - [ADDED]		Toggle count stat page content when enabled or disabled
 - [FIXED]		-1 messages sent
 
 MessageCounter 2.2.67 [February 2014]
 - [FIXED]		Bugs in Sent Message counter
 
 MessageCounter 2.2.74 [March 2014]
 - [ADDED]		Notifiction on reaching cycle limit
 - [CHANGED]	Sent messages count ui tweaks
 - [CHANGED]	Unobstructed loading screen
 
 MessageCounter 2.2.85 [May 2014] 
 - [CHANGED]	Using Pager Tab Strip
 - [ADDED] 		Previous cycle stats
 - [CHANGED]	Sent Messages screen layout
 - [CHANGED]	Simplified UI
 
 MessageCounter 2.2.90 [June 2014]
 - [FIXED]		Service was not started after app update
 
------------------------------------
	Version 2.3
------------------------------------

 MessageCounter 2.3.12 [July 2014]
 - [ADDED]		Widget for messages sent
 - [CHANGED]	Settings icon
 - [CHANGED]	Settings menu to actionbar
 - [CHANGED]	UI Tweaks
 - [ADDED]		Widget update broadcast when sending message